--- a/src/ImageGallery/ImageGallery.module.css
+++ b/src/ImageGallery/ImageGallery.module.css
@@ -1,5 +1,6 @@
 .ImageGallery {
   display: grid;
+  width: 1660px;
   max-width: calc(100vw - 48px);
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-gap: 16px;
