--- a/src/Button/Button.module.css
+++ b/src/Button/Button.module.css
@@ -1,9 +1,6 @@
 .button {
   padding: 8px 16px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 20px auto;
   border-radius: 2px;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
